; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_update-index.c_process_lstat_error.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_update-index.c_process_lstat_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"lstat(\22%s\22): %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @process_lstat_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_lstat_error(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @is_missing_file_error(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @remove_one_path(i8* %10)
  store i32 %11, i32* %3, align 4
  br label %17

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i8* @strerror(i32 %14)
  %16 = call i32 @error(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %13, i8* %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %12, %9
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @is_missing_file_error(i32) #1

declare dso_local i32 @remove_one_path(i8*) #1

declare dso_local i32 @error(i8*, i8*, i8*) #1

declare dso_local i8* @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
